# detection

./: .gitignore  CMakeLists.txt  Frame.hpp  Main.cpp  MotionCapture.cpp  MotionCapture.h  MotionCapture.hpp  compile_commands.json  main.cpp
